apps/todo_api/k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-playground
  labels:
    app: web-playground
spec:
  replicas: 1
  template:
    metadata:
      name: web-playground
      labels:
        app: web-playground
    spec:
      serviceAccountName: web-playground
      restartPolicy: Always
      #      imagePullSecrets:
      #        - name: docker-registry-secret
      containers:
        - name: web-playground
          image: yurikrupnik/web-playground
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: "16Mi"
              cpu: "200m"
            requests:
              memory: "8Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            runAsUser: 1000
            runAsGroup: 3000
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
  selector:
    matchLabels:
      app: web-playground
