apps/todo_api/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-playground
  annotations:
    "prometheus.io/scrape": "true"
  labels:
    run: web-playground
spec:
  type: ClusterIP
  ports:
    - name: http
#      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: web-playground
