apps/todo_api/k8s/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-namespace
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web-playground
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: { }
  egress:
    - to:
        - podSelector: { }
